Overflow fixed

--- a/style.css
+++ b/style.css
@@ -449,6 +449,7 @@ nav li {
   top: 31rem;
   right: -0.5rem;
   height: 6rem;
+  width: 6rem;
 }
 
 #stores h2 {
